--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
 	"short_name": "Bokmassan",
 	"name": "Svenska Bokmässan",
 	"start_url": "/index.html",
-	"display": "standalone",
+	"display": "fullscreen",
 	"orientation": "landscape"
 }
